# heat-ai

./: README.md
Matlab/: Readme.md  cgm-ai.m  cgm-ai4.m  heataiv3.m  heataiv4.m  int-ai.m  int-ai4.m
R/: Readme.md  cgm-ai.r  cgm-ai4.r  heataiv3.r  heataiv3_updated.r  heataiv4.r  int-ai.r  int-ai4.r
chapel/: heat-ai-v4.cpl  heat-ai.cpl
cpp/: Readme.md  cgm-ai.cpp  cgm-ai4.cpp  compile.sh  heat-ai-omp-v4-debugged.cpp  heat-ai-omp.cpp  heat-ai-v4.cpp  int-ai.cpp  int-ai4.cpp
fortran/: README.md  cgm-ai-debugged.f90  cgm-ai.f90  cgm-ai4.f90  compile.sh  heat-ai-debugged.f90  heat-ai-v4-debugged.f90  heat-ai-v4.f90  heat-ai.f90  int-ai-debugged.f90  int-ai.f90  int-ai4.f90
go/: README.md  cgm-ai.go  cgm-ai4.go  compile.sh  heat-ai-debugged.go  heat-ai-v4.go  heat-ai.go  int-ai.go  int-ai4.go
hpx/: CMakeLists.txt  heat-ai-v4.cpp  heat-ai.cpp
java/: ConjugateGradientSolver4.java  HeatEquationSolver.java  HeatEquationSolver4.java  SinArea.java  SinArea4.java  cgm-ai.java  int-ai.java
julia/: README.md  cgm-ai.jl  cgm-ai4-debugged.jl  cgm-ai4.jl  heat-ai-debugged.jl  heat-ai-v4-debugged.jl  heat-ai-v4.jl  heat-ai.jl  int-ai.jl  int-ai4.jl
kokkos/: heat-ai-v4.cpp  heat-ai.cpp
python/: README.md  cgm-ai.py  cgm-ai4.py  heat-ai-v4.py  heat-ai.py  heat_ai.py  heat_ai_cgt4.py  int-ai.py  int-ai4.py  int-ai4_2.py  int-ai4_debugged.py
rust/: README.md
rust/cgm-ai/src/: main_old.rs
rust/cgm-ai4/src/: main.rs
rust/heat-ai/: Cargo.toml
rust/heat-ai/src/: main.rs  main.rs.old
rust/heat_aiv4/: Cargo.toml
rust/int-ai/: Cargo.toml
rust/int-ai4/: Cargo.toml
(+4 files in other folders)
